# mine-sweeper

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  model.c  model.h
